# llm-cyber-safety-eval

./: .gitignore  README.md  pyproject.toml
data/: prompt_suite.jsonl
docs/: anthropic_fellows_project_pitch.md  research_writeup.md  scoring_rubric.md
examples/: mock_model.py  static_responses.jsonl
runs/static-demo/: report.md  results.csv  results.json
src/cyber_safety_eval/: __init__.py  cli.py  prompts.py  providers.py  report.py  runner.py  schema.py  scorers.py
tests/: test_scorers.py
