[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-cyber-safety-eval"
version = "0.1.0"
description = "A safe, portfolio-ready evaluation framework for testing model behavior across cyber-defense, dual-use, jailbreak, and SOC investigation scenarios."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Andrew Dumbiri" }]
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.6",
  "typer>=0.12",
  "rich>=13.7",
  "pandas>=2.0",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
cyber-safety-eval = "cyber_safety_eval.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
